# doggydex

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dockerfile  download_weights.py  prepare_model.py  pyproject.toml  quantize_model.py  requirements.txt
certs/: cert.pem  key.pem
website/: __init__.py  classes.py  drive_access.py  identifier.py  views.py
website/static/: index.js
website/static/css/: styles.css
website/templates/: dog.html.j2  home.html.j2  layout.html.j2
