[tool.poetry]
name = "doggydex"
version = "0.1.0"
description = "dog breed classifier"
authors = ["Joe Foster <joe.foster@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
